tdf#156629 Font,highlighting color buttons in sidebar have white background...

..after transparency -> alpha change

regression from
    commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
    Author: Noel Grandin
    Date:   Fri Apr 16 20:33:10 2021 +0200
    Convert internal vcl bitmap formats transparency->alpha (II)

Change-Id: Id1a578fcd30a9315fd5910ccdbff5d759cba77fa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155425
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>